// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PostAttachmentsCarouselImage - Snapshots > matches snapshot after main image loads 1`] = `
<div>
  <img
    alt="snapshot-loaded.jpg"
    class="max-h-[75dvh] w-full rounded-md object-contain"
    data-testid="image-main"
    id="snapshot-loaded-id"
    src="https://example.com/main-loaded.jpg"
  />
</div>
`;

exports[`PostAttachmentsCarouselImage - Snapshots > matches snapshot before main image loads (showing placeholder) 1`] = `
<div>
  <img
    alt="snapshot-test.jpg"
    class="max-h-[75dvh] w-full rounded-md object-contain"
    data-testid="image-feed"
    src="https://example.com/feed.jpg"
  />
  <img
    alt="snapshot-test.jpg"
    class="size-0"
    data-testid="image-main"
    src="https://example.com/main.jpg"
  />
</div>
`;

exports[`PostAttachmentsCarouselImage - Snapshots > matches snapshot for GIF image (no placeholder) 1`] = `
<div>
  <img
    alt="snapshot-animation.gif"
    class="max-h-[75dvh] w-full rounded-md object-contain"
    data-testid="image-main"
    id="snapshot-gif-id"
    src="https://example.com/main-animation.gif"
  />
</div>
`;

exports[`PostAttachmentsCarouselImage - Snapshots > matches snapshot for PNG image before loading 1`] = `
<div>
  <img
    alt="snapshot-png.png"
    class="max-h-[75dvh] w-full rounded-md object-contain"
    data-testid="image-feed"
    src="https://example.com/feed-image.png"
  />
  <img
    alt="snapshot-png.png"
    class="size-0"
    data-testid="image-main"
    src="https://example.com/main-image.png"
  />
</div>
`;
